rename name -> title

--- a/_includes/api-card.html
+++ b/_includes/api-card.html
@@ -2,7 +2,7 @@
 	<div class="content">
 		<img class="right floated mini ui image" src="{{ site.baseurl }}{{ include.description.logo }}" alt="logo de {{ include.description.title }}"/>
 
-		<div class="header">{{ include.description.name }}</div>
+		<div class="header">{{ include.description.title }}</div>
 		<div class="meta">
 			{% include owner.html owner=include.description.owner %}
 		</div>
