--- a/_includes/service-card.html
+++ b/_includes/service-card.html
@@ -17,8 +17,8 @@
 	<div class="extra content">
 		API utilisée{% if include.service.api.size > 1 %}s{% endif %}&nbsp;:
 		{% for apiName in include.service.api %}
-		{% assign api = site.api | where: "name", apiName | first %}
-			<a class="ui label" href="{{ site.baseurl }}{{ api.url }}"> {{ api.name }}</a>
+		{% assign api = site.api | where: "title", apiName | first %}
+			<a class="ui label" href="{{ site.baseurl }}{{ api.url }}"> {{ api.title }}</a>
 		{% endfor %}
 	</div>
 </div>
