--- a/_layouts/api.html
+++ b/_layouts/api.html
@@ -9,7 +9,7 @@ layout: default
       <div class="twelve wide centered column">
         <h1 class="ui inverted header">
           {% assign category = site.api_category | where:"id", page.category | first %}
-          <i class="{{ category.logo }} icon"></i>{{ page.name }}
+          <i class="{{ category.logo }} icon"></i>{{ page.title }}
         </h1>
         <h2 class="ui inverted header">
           {{ page.tagline }}
