--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,8 +51,14 @@
           </div>
         </div>
         <div class="column">
-          Recherche par : <br>
-          <img class="ui tiny image" src="{{ site.baseurl }}/img/algolia_logo.svg" alt="algolia logo">
+          <div class="ui list">
+            <div class="item">
+              <i class="cloud icon"></i>
+              <div class="content">
+                <a href="{{ site.baseurl }}/api/api-gouv">l'API du site</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="one column row">
