rename experimentale -> experimental

--- a/_layouts/api.html
+++ b/_layouts/api.html
@@ -35,7 +35,7 @@ layout: default
   <div class="ui mobile reversed stackable grid">
     <div class="four wide column">
       <div class="ui segment">
-        {% if page.experimentale %}
+        {% if page.experimental %}
         <div class="ui yellow left ribbon label" >
           Expérimentale
         </div>
